opam-version: "2.0"
version: "1.0"
maintainer: "nicholas.chin@u.yale-nus.edu.sg"
homepage: "https://github.com/nick-chin"
dev-repo: "git://github.com:nick-chin/dsa_final.git"
bug-reports: "https://github.com/nick-chin/dsa_final/issues"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]

install: [ make ]
depends: [

 ]

description: "Yale-NUS College YSC2229 Data Structures and Algorithms final project"

tags: [
  "category:Computer Science/Education/Basic Algorithms and Data Structures"
  "keyword:data structures"
  "keyword:algorithms"
]

authors: [
  "4 of us"
]
